2012-05-05 Christoph Redl   <redl@kr.tuwien.ac.at>

	* src/Nogood.cpp: Likewise
	* include/dlvhex2/Nogood.h: New print methods
	* src/UnfoundedSetChecker.cpp: Nogood exchange
	between UFS detection and main search
	* include/dlvhex2/UnfoundedSetChecker.h: Likewise
	* include/dlvhex2/FLPModelGeneratorBase.tcc: small changes

2012-04-28 Christoph Redl   <redl@kr.tuwien.ac.at>

	* dlvhex.cpp: Remove option "--mincheck"
	* GuessAndCheckModelGenerator.cpp: Likewise.
	* GuessAndCheckModelGenerator.h: Likewise
	* GenuineGuessAndCheckModelGenerator.cpp: Likewise;
	Implement a framework for external atom evaluation heuristics
	and UFS check heuristics.
	* GenuineGuessAndCheckModelGenerator.h: Likewise

2012-04-26 Christoph Redl   <redl@kr.tuwien.ac.at>

	* FLPModelGeneratorBase.h: Implement well-justified FLP semantics
	* FLPModelGeneratorBase.cpp: Likewise

2012-04-21  Christoph Redl   <redl@kr.tuwien.ac.at>

	* src/Registry.cpp: Implement reverse lookup for auxiliary constant symbols
	* include/dlvhex2/h: Likewise

2012-04-13  Christoph Redl   <redl@kr.tuwien.ac.at>

	* src/dlvhex.cpp: Change of default setting: no explicit minimality check by default (obsolete due to FLP check).
	Add option "--ufslearn".
	* include/dlvhex2/FLPModelGeneratorBase.h: Add an method for learning nogoods from UFS checks.
	Move method for learning nogoods from failed FLP checks from GenuineGuessAndCheckModelGenerator.
	* src/FLPModelGeneratorBase.cpp: Likewise
	* include/dlvhex2/GenuineGuessAndCheckModelGenerator.h: Likewise
	* src/GenuineGuessAndCheckModelGenerator.cpp: Likewise
	* include/dlvhex2/ID.h:
	Introduce property for external atom auxiliaries to distinct them from other auxiliaries
	(needed by genuine solvers).
	* include/dlvhex2/Registry.cpp: Update getAuxiliearyConstant accordingly.
	* include/dlvhex2/OrdinaryAtomTable.h: Add method getIDByAddress.

2012-04-11  Christoph Redl   <redl@kr.tuwien.ac.at>
